# expanding-worlds

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RFC-0001-Core-Note-Node-and-Canvas-Model.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
RAG/: .loc-reviews.tsv  CODE-AUDIT-2026-07-10-CODEX.md  CODE-AUDIT-2026-07-10-HELPER-CONSISTENCY.md  CODE-AUDIT-2026-07-11-LOC-MODULARITY.md  DESIGN-QUEUE.md  Design-letter-3.md  Expanding Worlds - Baseline UI Vision.html  Expanding Worlds - UI Vision.html  HUMAN-TESTING-RESULTS.md  HUMAN-TESTING.md  INDEX.md  LEAD-REVIEW-2026-07-09-lifecycle-and-testing-closure.md  OWNER-APPROVALS.md  PHASE-1-SIGNOFF.md  RFC-0001-Core-Note-Node-and-Canvas-Model.md
RAG/.obsidian/: graph.json
RAG/AI-EPIC/: AI-EPIC-001-renderer-spike.md  AI-EPIC-002-workspace-scaffolding.md  AI-EPIC-003-domain-persistence-core.md  AI-EPIC-004-canvas-board-loop.md  AI-EPIC-005-notes-links-phantoms.md  AI-EPIC-006-navigation-discovery.md  AI-EPIC-006-shell-and-local-scope.md  AI-EPIC-007-lifecycle-trash-undo.md  AI-EPIC-008-export-import-signoff.md  AI-EPIC-013-global-views.md  (+23 more)
archive/: RFC-0001-rev0.4.docx
scripts/: bake-icon-atlas.mjs  generate-seed.mjs  repair-electron.sh
spike/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
spike/tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
spike/tauri-shell/src-tauri/capabilities/: default.json
spike/tauri-shell/src-tauri/src/: lib.rs  main.rs
(+929 files in other folders)
